--- a/PartCommander/PartCommander.csproj
+++ b/PartCommander/PartCommander.csproj
@@ -51,8 +51,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddScenarioModules.cs" />
+    <Compile Include="ConfigNodeExtensions.cs" />
+    <Compile Include="GameSettings.cs" />
     <Compile Include="PartCommander.cs" />
+    <Compile Include="PartCommanderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PartCommanderScenario.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -65,6 +70,7 @@
     <Content Include="textures\toolbar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
