Graphical cleanup.  Added filter box.

--- a/PartCommander/PartCommander.csproj
+++ b/PartCommander/PartCommander.csproj
@@ -58,6 +58,7 @@
     <Compile Include="PartCommanderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PartCommanderScenario.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
