--- a/PartCommander/PartCommander.csproj
+++ b/PartCommander/PartCommander.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ConfigNodeExtensions.cs" />
     <Compile Include="GameSettings.cs" />
     <Compile Include="PartCommander.cs" />
+    <Compile Include="PopOffWindow.cs" />
     <Compile Include="PartCommanderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PartCommanderScenario.cs" />
@@ -66,6 +67,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="textures\az_on.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\close_off.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\close_on.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\popout_off.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\popout_on.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="textures\resize_off.png">
