--- a/PartCommander/PartCommander.csproj
+++ b/PartCommander/PartCommander.csproj
@@ -53,10 +53,9 @@
   <ItemGroup>
     <Compile Include="AddScenarioModules.cs" />
     <Compile Include="ConfigNodeExtensions.cs" />
-    <Compile Include="GameSettings.cs" />
+    <Compile Include="ModSettings.cs" />
     <Compile Include="ModStyle.cs" />
     <Compile Include="PartCommander.cs" />
-    <Compile Include="PopOutWindow.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenario.cs" />
